# techwave_web_K8s

./: .gitignore  Jenkinsfile-observ  README.md  jenkinsfile-app  kind-config.yaml  pyproject.toml
.github/workflows/: back_docker.txt  back_docker.yaml  back_docker_V2.back  cluster-create.yml  docker.yml
app/: app.py
app/templates/: index.html
app/tests/: test_math.py  test_routes.py
argoCD/: argo-application.yaml  argocd-app.yaml  config.xml  identity.key.enc  install-argo.sh  install-argocd-kind.sh  install-argocd-kind_v2.sh  install-argocd-no-appset.sh  install-argocd.sh  jenkins.telemetry.Correlator.xml  kind-config.yaml  permisos-argocd.yaml  secret.key  setup-full.sh
argoCD/secrets/: hudson.console.ConsoleNote.MAC  hudson.model.Job.serverCookie  hudson.model.User.DIRNAMES  hudson.util.Secret  jenkins.model.Jenkins.crumbSalt  jenkins.security.csp.ReportingContext.key  master.key  org.jenkinsci.main.modules.instance_identity.InstanceIdentity.KEY  org.jenkinsci.plugins.workflow.log.ConsoleAnnotators.consoleAnnotator
argoCD/updates/: default.json  hudson.plugins.gradle.GradleInstaller
azure-terraform/: outputs.tf
azure_terraform/: main.tf  variables.tf
docker/: Dockerfile  MultiStage_Dockerfile  docker-compose.yml  dockerfile-infra  dockerfile-infra2
helm/flask-app/: .helmignore  values-green.yaml  values.yaml
observability/K8s/: grafana-defa.yml  grafana-values.yaml  loki-values.yaml  prometheus-values.yaml  (+1 more)
terraform/: eks.tf  k8s.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf  vpc.tf
(+3401 files in other folders)
