[project]
name = "techwave-web"
version = "0.1.0"
description = "Proyecto Final DEVOPS"
authors = [
    {name = "desarrollador",email = "luis196909@outlook.es"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "opentelemetry-api (>=1.39.1,<2.0.0)",
    "opentelemetry-sdk (>=1.39.1,<2.0.0)",
    "opentelemetry-exporter-prometheus (>=0.60b1,<0.61)",
    "opentelemetry-instrumentation-flask (>=0.60b1,<0.61)",
    "python-json-logger (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
